--- a/pyproject.toml
+++ b/pyproject.toml
@@ -86,6 +86,8 @@ typing-extensions = "^4.12.2"
 azure-storage-blob = "^12.19.0"
 azure-identity = "^1.17.1"
 
+pip = "^24.1.2"
+ollama = "^0.3.0"
 [tool.poetry.group.dev.dependencies]
 coverage = "^7.6.0"
 ipykernel = "^6.29.4"
